# app/Models/Amenity.php
@@ -5,16 +5,13 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class PrimaryServicesMaster extends Model
+class Amenity extends Model
 {
     use HasFactory;
     protected $fillable = [
         'name',
-        'urlIcon',
+        'url',
         'business_key',
     ];
 
-    public function secondary_service(){
-        return $this->hasMany(SecondaryServicesMaster::class,'primary_service_id','id');
-    }
 }
