# app/Models/SecondaryServicesMaster.php
@@ -8,4 +8,11 @@ use Illuminate\Database\Eloquent\Model;
 class SecondaryServicesMaster extends Model
 {
     use HasFactory;
+
+    protected $fillable = [
+        'primary_service_id',
+        'secondaryName',
+        'urlIcon',
+        'business_key',
+    ];
 }
